# orkney_server

./: .env.template  .gitignore  .ocamlformat  README.md  dune-project  orkney.opam  server.opam
db/: schema.sql
db/migrations/: 20241213142221_create_table_users.sql  20241213153027_create_dream_session_table.sql  20241217110752_create_table_games.sql  20241217110752_create_table_rooms.sql  20250121144721_add_state.sql
dev-tools.locks/ocaml-lsp-server/: lock.dune  ocaml-lsp-server.pkg
dev-tools.locks/ocamlformat/: lock.dune
dune.lock/: lock.dune  safepass.pkg
scripts/: install-dune.sh
src/lib/: dune
src/models/: dune  game.ml  room.ml  user.ml
src/routes/: auth.ml  dune  games.ml  index.ml  json.ml  middleware.ml  rooms.ml  router.ml  utils.ml  websockets.ml
src/services/: dune  game.ml  json.ml  middleware.ml  room.ml  state.ml  uid.ml  user.ml  utils.ml
test/: dune
