(lang dune 3.18)

(name orkney)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Theo Addis <theocaddis@gmail.com>")

(maintainers "Theo Addis <theocaddis@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name orkney)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dream)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
